HelloUltraviolet/Fixtures/RejectedSource/Expressions/ValueUseNonBitcopyPlace/Expected.uv
//! Expected diagnostic metadata for the ValueUseNonBitcopyPlace rejected-source specimen.

expectedDiagnostic("E-UNS-0107", "rule.16.ValueUse-NonBitcopyPlace")
